# projecteuler-rust

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE  README.md
.devcontainer/: devcontainer.json
.github/workflows/: coverage.yml  rust.yml
src/: lib.rs  main.rs
src/graph/: dgraph.rs  minimal_spanning_tree.rs  mod.rs  shortest_path.rs
src/ntheory/: arithmetic.rs  factor.rs  mod.rs  palindrome.rs  primes.rs  pythagorean.rs  series.rs
src/problems/: mod.rs  problem01.rs  problem02.rs  problem03.rs  problem04.rs  problem05.rs  problem06.rs  problem07.rs  problem08.rs  problem09.rs  problem10.rs  problem100.rs  problem101.rs  problem102.rs  problem104.rs  problem107.rs  problem108.rs  problem11.rs  problem112.rs  problem113.rs  problem119.rs  problem12.rs  problem120.rs  problem121.rs  problem123.rs  problem124.rs  problem125.rs  problem13.rs  problem14.rs  problem145.rs  problem15.rs  problem16.rs  problem17.rs  problem173.rs  problem179.rs  problem18.rs  problem187.rs  problem19.rs  problem197.rs  problem20.rs  (+81 more)
src/series/: composite.rs  cubic.rs  fibonacci.rs  geometry.rs  heptagonal.rs  hexagonal.rs  mod.rs  octagonal.rs  pentagonal.rs  square.rs  triangular.rs
src/utils/: integers.rs  matrix.rs  mod.rs  monopoly.rs  poker.rs  timeit.rs
tests/: problems.rs
