[package]
name = "projecteuler-rust"
version = "0.0.1"
authors = ["mlefebvre"]
edition = "2021"

[dependencies]
arrayvec = "^0.7.2"
anyhow = "1"
bitvec = "1"
ndarray = "0.15.4"
nalgebra = "0.31"
factorial = "0.2"
itertools = "0.10"
lazy_static = "1.4"
num = "0.4"
phf = { version = "0.11", features = ["macros"] }
rand = "0.8"
thiserror = "1"
eval = "^0.4"


[dev-dependencies]
rstest = "0.15"

[profile.release]
strip = true
